minor fix for spacing between buttons in horizontal toolbar

--- a/dev/scss/base/_item.scss
+++ b/dev/scss/base/_item.scss
@@ -9,6 +9,10 @@
   min-width: $base-size;
   transition: border 300ms, width 300ms;
 
+  > .escort-inner {
+    max-width: 100%;
+  }
+
   &.escort-hidden {
     display: none !important;
   }
